bin/tests/snapshots/manual_inherit_from__d185f6bcc057384cb2f1ae3abb567fd1_lint_errfmt.snap
---
source: bin/tests/manual_inherit_from.rs
---
let a.b = 2; in { b = a.b; }
---
<temp_file_path>>1:19:W:4:This assignment is better written with `inherit`
