bin/tests/snapshots/manual_inherit_from__d185f6bcc057384cb2f1ae3abb567fd1_lint_stderr.snap
---
source: bin/tests/manual_inherit_from.rs
---
let a.b = 2; in { b = a.b; }
---
[04] Warning: Assignment instead of inherit from
   ╭─[ <temp_file_path>:1:19 ]
   │
 1 │ let a.b = 2; in { b = a.b; }
   │                   ────┬───  
   │                       ╰───── This assignment is better written with inherit
───╯
