bin/tests/snapshots/manual_inherit_from__fddffc3b779f8727d3ce7613925d3d3d_lint_json.snap
---
source: bin/tests/manual_inherit_from.rs
---
let a.b = 2; in { c = a.c; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "manual_inherit_from",
      "note": "Assignment instead of inherit from",
      "code": 4,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 19
            },
            "to": {
              "line": 1,
              "column": 27
            }
          },
          "message": "This assignment is better written with `inherit`",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 19
              },
              "to": {
                "line": 1,
                "column": 27
              }
            },
            "fix": "inherit (a) c;"
          },
          "fixable": true
        }
      ]
    }
  ]
}
