bin/tests/snapshots/manual_inherit_from__fix_028c2b7d873c7d864c3d8c6c90e32812eb9bd9fc519d0c966ddfdeb33a3fb0d0.snap
---
source: bin/tests/manual_inherit_from.rs
---
let a.b = 2; in { b = a.b; }

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let a.b = 2; in { b = a.b; }
+let a.b = 2; in { inherit (a) b; }
